--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: default
+    - name: myspace
       protocol: layer2
       addresses:
       - 192.168.56.240-192.168.56.250
