--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   config: |
     address-pools:
-    - name: myspace
+    - name: default
       protocol: layer2
       addresses:
-      - 192.168.56.240-192.168.56.250
+      - 192.168.0.150-192.168.0.160
